--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "body-parser": "^1.20.1",
     "connect-flash": "^0.1.1",
+    "crypto": "^1.0.1",
     "debug": "^4.3.4",
     "express": "^4.18.2",
     "express-autosanitizer": "^1.0.2",
