--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.20.1",
+    "borsh": "^0.7.0",
     "connect-flash": "^0.1.1",
     "crypto": "^1.0.1",
     "debug": "^4.3.4",
