--- a/server/package.json
+++ b/server/package.json
@@ -1,27 +1,36 @@
 {
-  "name": "minimal-server",
+  "name": "minimal-login",
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./app.js"
+    "start": "node ./app.js",
+    "test": "ava"
   },
   "repository": {
     "type": "git",
     "url": "git@github.com:gagdiez/minimal-json"
   },
-  "author": "@gagdiez",
+  "author": "Guillermo (guillermo@near.org)",
   "license": "MIT",
   "dependencies": {
-    "body-parser": "^1.20.1",
-    "connect-flash": "^0.1.1",
-    "debug": "^4.3.4",
+    "body-parser": "^1.20.2",
+    "borsh": "^2.0.0",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-autosanitizer": "^1.0.2",
-    "express-session": "^1.17.3",
-    "nunjucks": "^3.2.3",
-    "near-api-js":"^1.1.0",
-    "passport": "^0.6.0",
+    "js-sha256": "^0.11.0",
+    "jsonwebtoken": "^9.0.2",
+    "near-api-js": "^3.0.2",
+    "passport": "^0.7.0",
     "passport-custom": "^1.1.1",
-    "should": "~13.2.3"
+    "passport-jwt": "^4.0.1"
+  },
+  "devDependencies": {
+    "@dao-xyz/borsh": "^5.2.1",
+    "@types/bn.js": "^5.1.5",
+    "@types/node": "^20.11.19",
+    "ava": "^6.1.1",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3"
   }
 }
